# gitdot

./: .gitdot-ci.toml  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TEMP  justfile  myers.html  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
backend/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  cloudbuild.yaml
backend/src/: app.rs  dto.rs  extract.rs  git.rs  handler.rs  handlers.rs  lib.rs  macros.rs  main.rs
backend/src/app/: app_state.rs  auth.rs  bootstrap.rs  error.rs  extractor.rs  response.rs  router.rs  server.rs  settings.rs
backend/src/config/: app_state.rs  settings.rs
ci/: .env.example  Cargo.toml
ci/src/: app.rs  dto.rs  handler.rs  lib.rs
cli/: Cargo.toml
cli/src/: api.rs  cli.rs  command.rs  config.rs  executor.rs  keychain.rs  lib.rs  service.rs  store.rs  util.rs
core/: CLAUDE.md  Cargo.toml
core/migrations/: 20260116235251_create_organizations.down.sql  20260116235251_create_organizations.up.sql  20260117042027_create_users.down.sql  20260117042027_create_users.up.sql  20260117043157_create_organizations.down.sql  20260117043157_create_organizations.up.sql  20260118222626_create_repositories.up.sql  20260125182548_create_questions.up.sql  20260128000000_create_oauth_tables.down.sql  20260128000000_create_oauth_tables.up.sql  20260201050312_create_oauth.up.sql  20260207120000_disable_auth_user_trigger.down.sql  20260209000000_create_email_confirmed_trigger.down.sql  20260209000000_create_email_confirmed_trigger.up.sql  20260210000000_create_runners.up.sql  20260210100000_create_tasks.up.sql  20260211000000_create_dags.down.sql  20260211000000_create_dags.up.sql  20260211164923_add_token_type_to_access_tokens.up.sql  20260217170848_add_ref_to_commits.up.sql  20260217195542_commits_cascade_delete.down.sql  20260218120000_rename_token_user_id_to_principal_id.down.sql  20260218200000_add_runner_registered_and_last_verified.up.sql  20260220000000_create_oauth_user_trigger.up.sql  20260223100000_device_authorizations_cascade_user_delete.down.sql  20260223100000_update_dags_task_dependencies.down.sql  20260223100000_update_dags_task_dependencies.up.sql  20260224100000_add_dag_id_to_tasks.down.sql  20260224200000_create_github_installations.down.sql  20260224300000_create_migrations.down.sql  20260224300000_create_migrations.up.sql  20260225000000_rename_dags_to_builds.up.sql  20260225100000_refactor_builds.down.sql  20260225100000_refactor_builds.up.sql  20260225200000_simplify_builds_tasks.up.sql  20260226040624_rename_owner_id_in_migrations.up.sql  20260226060000_rename_task_script_to_command.up.sql  20260226210000_add_s2_uri_to_tasks.up.sql  20260226213829_add_visibility_to_migration_repositories.up.sql
core/src/: client.rs  clients.rs  dto.rs  error.rs  errors.rs  lib.rs  model.rs  models.rs  repositories.rs  repository.rs  service.rs  services.rs  util.rs
gitdot-auth/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile
gitdot-auth/src/: app.rs  consts.rs  dto.rs  extract.rs  handler.rs  lib.rs  middleware.rs
gitdot-axum/: Cargo.toml
gitdot-axum/src/: bootstrap.rs  config.rs  extract.rs  lib.rs
gitdot-cli/: CLAUDE.md  Cargo.toml  README.md
gitdot-cli/src/: bootstrap.rs  cli.rs  client.rs  command.rs  executor.rs  git.rs  lib.rs  os.rs  store.rs  util.rs
gitdot-core/: CLAUDE.md  Cargo.toml  README.md
gitdot-core/derive/: Cargo.toml
gitdot-core/hooks/: post-receive  pre-receive  proc-receive
gitdot-core/migrations/: 20260117042027_create_users.up.sql  20260201050312_create_oauth.down.sql  20260207120000_disable_auth_user_trigger.up.sql  20260210000000_create_runners.down.sql  20260217170848_add_ref_to_commits.down.sql  20260217170848_add_ref_to_commits.up.sql  20260219000000_add_owner_name_to_runners.down.sql  20260219000000_add_owner_name_to_runners.up.sql  20260219000001_drop_tokens_user_fk.down.sql  20260219000001_drop_tokens_user_fk.up.sql  20260220000000_create_oauth_user_trigger.up.sql  20260223000000_add_assigned_task_status.up.sql  20260224000000_add_task_dependencies_to_dags.up.sql  20260225000000_rename_dags_to_builds.down.sql  20260225190207_add_github_login_to_github_installations.down.sql  20260225190207_add_github_login_to_github_installations.up.sql  20260226040624_rename_owner_id_in_migrations.down.sql  20260226050000_task_waits_for.up.sql  20260226060000_rename_task_script_to_command.down.sql  20260226070000_add_number_to_migrations.down.sql  20260226120000_add_build_number.up.sql  20260226210000_add_s2_uri_to_tasks.down.sql  20260226213829_add_visibility_to_migration_repositories.down.sql  20260227010000_rename_runner_last_verified_to_last_active.down.sql  20260227020000_add_runner_id_to_tasks.up.sql  20260227030000_add_build_status.down.sql  20260227040000_build_trigger_enum.up.sql  20260301000000_drop_builds_updated_at.up.sql  20260304020635_create_reviews.down.sql  20260304020635_create_reviews.up.sql  20260312000000_create_access_token_hook.down.sql  20260312000000_create_access_token_hook.up.sql  20260313000000_add_diffs_to_commits.up.sql  20260313100000_update_commits_author.up.sql  20260314000000_add_parent_hash_to_revisions.down.sql  20260316000000_simplify_review_status.down.sql  20260316000000_simplify_review_status.up.sql  20260316132000_add_commits_sha_short.down.sql  20260316132000_add_commits_sha_short.up.sql  20260316140000_add_parent_sha_to_commits.down.sql  (+104 more)
gitdot-core/src/: client.rs  dto.rs  error.rs  lib.rs  model.rs  repository.rs  service.rs  util.rs
gitdot-core/templates/: code.html  login.html  signup.html
gitdot-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
gitdot-server/src/: app.rs  dto.rs  extract.rs  handler.rs  layer.rs  lib.rs  util.rs
runner/: Cargo.toml
runner/src/: cli.rs  command.rs  config.rs  lib.rs
s2-api/: CLAUDE.md  Cargo.toml  README.md
s2-api/src/: data.rs
s2-common/: CLAUDE.md  Cargo.toml  README.md
s2-common/src/: caps.rs
s2-sdk/: CLAUDE.md  Cargo.toml  README.md
s2-sdk/src/: api.rs  client.rs  ops.rs  types.rs
s2-sdk/tests/: account_ops.rs  basin_ops.rs
s2/common/: Cargo.toml
(+2470 files in other folders)
