[package]
name = "gitdot_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gitdot_server"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.8", features = ["macros"] }
base64 = { workspace = true }
chrono = { workspace = true }
dotenvy = "0.15.7"
git2 = { workspace = true }
gitdot_core = { path = "../core" }
http = "1.4.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
serde = { workspace = true }
serde_json = "1.0.149"
sqlx = { workspace = true }
tempfile = "3.24.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
