[package]
name = "gitdot-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gitdot-server"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8.8", features = ["macros"] }
base64 = { workspace = true }
chrono = { workspace = true }
dotenvy = "0.15.7"
futures = { workspace = true }
git2 = { workspace = true }
gitdot-api = { path = "../api" }
gitdot-core = { path = "../core" }
http = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = [
  "cors",
  "request-id",
  "timeout",
  "trace"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }