[package]
name = "gitdot_cli"
version = "0.1.0"
edition = "2024"
description = ""

[[bin]]
name = "gitdot"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
dirs-next = "2.0.0"
gitdot_core = { path = "../core" }
reqwest = "0.13.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.9.11"
uuid = { workspace = true }
