[package]
name = "gitdot_cli"
version = "0.1.0"
edition = "2024"
description = ""

[[bin]]
name = "gitdot"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
dirs-next = "2.0.0"
gitdot_api = { path = "../api" }
gitdot_client = { path = "../client" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.9.11"
url = "2.5.8"

[features]
default = ["main", "runner"]
main = []
runner = []
