[package]
name = "gitdot_cli"
version = "0.1.0"
edition = "2024"
description = ""

[[bin]]
name = "gitdot"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
dirs-next = "2.0.0"
gitdot_api = { path = "../api" }
gitdot_client = { path = "../client" }
gitdot_config = { path = "../config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.9.11"
tombi-config = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-diagnostic = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-formatter = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-linter = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-schema-store = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
itertools = "0.14.0"
url = "2.5.8"

[features]
default = ["main", "runner"]
main = []
runner = []
