[package]
name = "gitdot_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
nutype = { workspace = true }
git2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
