[package]
name = "gitdot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
base62 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
crc32fast = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
gitdot-config = { path = "../config" }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
nutype = { workspace = true }
octocrab = "0.49.5"
rand = { workspace = true }
secrecy = "0.10.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "1.0.3"
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
