[package]
name = "gitdot-auth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gitdot-auth"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
dotenvy = { workspace = true }
gitdot-api = { workspace = true }
gitdot-core = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "timeout", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
