[package]
name = "gitdot-axum"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
gitdot-core = { workspace = true }
jsonwebtoken = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true }
