[package]
name = "gitdot_runner"
version = "0.1.0"
edition = "2024"
description = "A gitdot runner"

[[bin]]
name = "gitdot-runner"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
gitdot_core = { path = "../core" }
gitdot_client = { path = "../client" }
serde = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.13.1", features = ["json"] }
toml = "0.9.11"
