[package]
name = "s2-api"
version = "0.27.7"
edition = "2024"
description = "API types for S2, the durable streams API"
homepage = "https://s2.dev"
repository = "https://github.com/s2-streamstore/s2"
license = "MIT"
keywords = ["api", "durable", "log", "s2", "streams"]
categories = ["api-bindings"]

[dependencies]
axum = { workspace = true, optional = true }
base64ct = { workspace = true, features = ["alloc"] }
bytes = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
enum-ordinalize = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
prost = { workspace = true }
s2-common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
prost-build = { workspace = true, optional = true }

[features]
axum = ["dep:axum", "s2-common/axum"]
codegen = ["dep:prost-build"]
