[package]
name = "s2-common"
version = "0.28.1"
edition = "2024"
description = "Common stuff for client and servers for S2, the durable streams API"
homepage = "https://s2.dev"
repository = "https://github.com/s2-streamstore/s2"
license = "MIT"
keywords = ["api", "durable", "log", "s2", "streams"]

[dependencies]
axum = { workspace = true, optional = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
compact_str = { workspace = true, features = ["serde"] }
enum-ordinalize = { workspace = true }
enumset = { workspace = true }
http = { workspace = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }

[features]
axum = ["dep:axum"]
clap = ["dep:clap"]
rkyv = ["compact_str/rkyv", "dep:rkyv"]
