[package]
name = "s2-sdk"
version = "0.24.3"
edition = "2024"
description = "Rust SDK for S2"
documentation = "https://docs.rs/s2-sdk/latest/s2_sdk/"
homepage = "https://s2.dev"
repository = "https://github.com/s2-streamstore/s2/tree/main/sdk"
license = "MIT"
keywords = ["client", "durable", "s2", "sdk", "streams"]
categories = ["api-bindings", "database"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
async-compression = { version = "0.4", features = ["gzip", "tokio", "zstd"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
hyper = "1.8"
hyper-rustls = { version = "0.27", default-features = false, features = [
  "aws-lc-rs",
  "http2",
  "native-tokio",
  "tls12",
] }
hyper-util = { version = "0.1", features = [
  "client-legacy",
  "http1",
  "http2",
  "tokio",
] }
prost = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
s2-api = { workspace = true }
s2-common = { workspace = true }
secrecy = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "sync", "time"] }
tokio-muxt = "0.7"
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "rt"] }
tracing = { workspace = true }
url = "2.5"
urlencoding = "2.1"
uuid = { workspace = true, features = ["fast-rng", "v4"] }

[dev-dependencies]
assert_matches = "1.5"
rstest = { workspace = true }
test-context = { version = "0.5" }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-shared-rt = "0.1"

[features]
_hidden = []
